--- a/package.json
+++ b/package.json
@@ -7,11 +7,32 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "slicemachine": "start-slicemachine",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
+    "gsap": "^3.12.5",
     "nuxt": "^3.10.1",
+    "pinia": "^2.1.7",
+    "sass": "^1.70.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
+  },
+  "devDependencies": {
+    "@nuxt/eslint-config": "^0.2.0",
+    "@nuxt/test-utils": "^3.11.0",
+    "@nuxtjs/prismic": "^3.1.0",
+    "@slicemachine/adapter-nuxt": "^0.3.34",
+    "@vue/test-utils": "^2.4.4",
+    "eslint": "^8.56.0",
+    "happy-dom": "^13.3.8",
+    "playwright-core": "^1.41.2",
+    "slice-machine-ui": "^1.23.1",
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.2",
+    "vue-tsc": "^1.8.27"
   }
 }
