--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "mitt": "^3.0.1",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/test-utils": "^3.11.0",
     "@nuxtjs/prismic": "^3.1.0",
