--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^3.10.1",
     "pinia": "^2.1.7",
     "sass": "^1.70.0",
+    "unhead": "^1.8.10",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
